# XCSoar-the-library

./: .gitignore  AUTHORS  CMakeLists.txt  CopyrightNotice.cpp  CopyrightNotice.hpp  INSTALLATION  Init.cmake  README  README.rst
doc/: Doxyfile.xcsoar
doc/manual/en/: compiling.tex
src/Engine/Airspace/: AirspacesInterface.hpp
src/Event/Poll/: Queue.cpp
src/Math/: MathTables.h
src/Screen/Memory/: Buffer.hpp
src/Terrain/jasper/jpc/: jpc_cs.c
src/Thread/: Util.hpp
src/Util/: TrivialArray.hxx
